bk_ida/gccida/c0/update_giv_derive
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6446:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // [rsp+30h] [rbp-30h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6446:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // [rsp+30h] [rbp-30h] 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6447:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // [rsp+38h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6447:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // [rsp+38h] [rbp-28h] 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6459:7: error: use of undeclared identifier 'biv'
for ( biv = bl_0->biv; biv; biv = biv->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6459:24: error: use of undeclared identifier 'biv'; did you mean 'div'?
for ( biv = bl_0->biv; biv; biv = biv->next_iv ) 
                       ^~~
                       div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6459:29: error: use of undeclared identifier 'biv'
for ( biv = bl_0->biv; biv; biv = biv->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6459:35: error: use of undeclared identifier 'biv'
for ( biv = bl_0->biv; biv; biv = biv->next_iv ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6461:92: error: use of undeclared identifier 'biv'
if ( ( unsigned __int16)*( _DWORD *)pa == 36 || ( unsigned __int16)*( _DWORD *)pa == 33 || biv->insn == pa ) 
                                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6463:7: error: use of undeclared identifier 'giv'
for ( giv = bl_0->giv; giv; giv = giv->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6463:24: error: use of undeclared identifier 'giv'; did you mean 'div'?
for ( giv = bl_0->giv; giv; giv = giv->next_iv ) 
                       ^~~
                       div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6463:29: error: use of undeclared identifier 'giv'
for ( giv = bl_0->giv; giv; giv = giv->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6463:35: error: use of undeclared identifier 'giv'
for ( giv = bl_0->giv; giv; giv = giv->next_iv ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6465:23: error: use of undeclared identifier 'giv'
if ( ( ( *( ( _WORD *)giv + 50) >> 6) & 1) == 0 ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6467:66: error: use of undeclared identifier 'giv'
if ( ( unsigned __int16)*( _DWORD *)pa != 36 || ( ( *( ( _WORD *)giv + 50) >> 3) & 1) != 0 ) 
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6469:6: error: use of undeclared identifier 'giv'
if ( giv->mult_val != const_int_rtx[64] && ( *( ( _WORD *)giv + 50) & 1) == 0 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6469:59: error: use of undeclared identifier 'giv'
if ( giv->mult_val != const_int_rtx[64] && ( *( ( _WORD *)giv + 50) & 1) == 0 ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6471:6: error: use of undeclared identifier 'biv'
if ( biv->insn == pa ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/loop.c:6474:6: error: use of undeclared identifier 'biv'
if ( biv->mult_val == const_int_rtx[65] ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_giv_derive/src/obj/loop.o] Error 1
